Fixed layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -46,18 +46,18 @@ h1 {
 .container {
 	padding-top: 20px;
 	margin: 0 auto;
-	width: 1200px;
+	width: 90%;
 }
 .results {
 	margin:0 auto;
 }
 
 .result-cards {
-	width: 20%;
+	width: 17%;
 	height: 250px;
 	box-shadow: 0px 4px 33px -7px #000;
 	border-radius: 3px;
-	margin: 15px;
+	margin: 16px;
 	float: left;
 }
 .result-cards img {
@@ -70,4 +70,5 @@ h1 {
     border-radius: 2px;
     border: 1px solid #e0e0e0;
     margin: 12px;
+    width: 63%;
 }
